* BarclaysEpdqExtraPlus: updated custom_eci test + remote tests [yyapuncich] #4022
* CyberSource: Add customerID field [deemeyers] #4025
* CyberSource: Adjust Auth [naashton] #3956
* Valid Canadian Institution Numbers [naashton] #4024
* PayTrace: Adjust purchase and capture methods to handle MultiResponse scenarios [meagabeth] #4027
* Payflow: Add support for MERCHDESCR field [rachelkirk] #4028

== Version 1.121 (June 8th, 2021)
* Braintree: Lift restriction on gem version to allow for backwards compatibility [naashton] #3993
* Payment Express/Windcave: Send amount on verify calls [cdmackeyfree] #3995
* Orbital: Use billing_address name as fallback [curiousepic] #3966
* vPOS: handle shop_process_id correctly [therufs] #3996
* Checkout v2: Support metadata field [saschakala] #3992
* Adyen: Support networkTxReference field [naashton] #3997
* Paypal Express: Enable PayPal express reference transaction request to send merchant session id [janees-e] #3994

== Version 1.120.0 (May 28th, 2021)
* Braintree: Bump required braintree gem version to 3.0.1
* Stripe PI: ensure `setup_future_sage` and `off_session` work when using SetupIntents.
* Orbital: Update commit to accept retry_logic in params [jessiagee] #3890
* Orbital: Update remote 3DS tests [jessiagee] #3892
* Mercado Pago: support Creditel card type [therufs] #3893
* Payeezy: Update error mapping [meagabeth] #3896
* HPS: Add support for stored_credential [cdmackeyfree] #3894
* Orbital: Ensure payment_detail sends for ECP [jessiagee] #3899
* Payeezy: Update `error_code_from` method [meagabeth] #3900
* Worldpay: Add support for `statementNarrative` field [meagabeth] #3901
* Mercado Pago: Give ability to pass capture option in authorize txn field [naashton] #3897
* Orbital: Ensure correct fields sent in refund [jessiagee] #3903
* WorldPay: remove some defaults in billing address [carrigan] #3902
* Adyen: Support for General Credit [naashton] #3904
* Worldpay: reintroduce address1 and city defaults [carrigan] #3905