@@ -26,6 +26,7 @@
 * Valid Canadian Institution Numbers [naashton] #4024
 * PayTrace: Adjust purchase and capture methods to handle MultiResponse scenarios [meagabeth] #4027
 * Payflow: Add support for MERCHDESCR field [rachelkirk] #4028
+* Update bank routing account validation check [jessiagee] #4029
 
 == Version 1.121 (June 8th, 2021)
 * Braintree: Lift restriction on gem version to allow for backwards compatibility [naashton] #3993
